--- a/sections/gift-page.liquid
+++ b/sections/gift-page.liquid
@@ -94,8 +94,7 @@
         {
           "type": "text",
           "id": "badge",
-          "label": "Badge",
-          "default": ""
+          "label": "Badge"
         },
         {
           "type": "text",
