--- a/sections/main-product-subscription.liquid
+++ b/sections/main-product-subscription.liquid
@@ -368,8 +368,7 @@
         {
           "type": "text",
           "id": "badge",
-          "label": "Badge",
-          "default": ""
+          "label": "Badge"
         },
         {
           "type": "text",
