--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -1,6 +1,21 @@
 {% liquid
+  assign default_subscribe_link = routes.all_products_collection_url
+  if settings.subscription_product != blank
+    assign default_subscribe_link = settings.subscription_product.url
+  elsif settings.subscription_fallback_link != blank
+    assign default_subscribe_link = settings.subscription_fallback_link
+  elsif collections['all'] != blank and collections['all'].products_count > 0
+    assign first_product = collections['all'].products | first
+    if first_product != blank
+      assign default_subscribe_link = first_product.url
+    endif
+  endif
+
   assign primary_cta_label = section.settings.cta_label
   assign primary_cta_link = section.settings.cta_link
+  if primary_cta_link == blank
+    assign primary_cta_link = default_subscribe_link
+  endif
 
   if settings.prelaunch_mode
     assign primary_cta_label = section.settings.waitlist_label
@@ -36,7 +51,7 @@
       {% if shop.customer_accounts_enabled %}
         <a href="{{ routes.account_url }}" class="text-muted">Cuenta</a>
       {% endif %}
-      <a href="{{ primary_cta_link | default: routes.all_products_collection_url }}" class="btn btn--secondary">{{ primary_cta_label }}</a>
+      <a href="{{ primary_cta_link }}" class="btn btn--secondary">{{ primary_cta_label }}</a>
     </div>
 
     <details class="mobile-nav">
@@ -47,7 +62,7 @@
             <a href="{{ link.url }}">{{ link.title }}</a>
           {% endfor %}
         {% endif %}
-        <a href="{{ primary_cta_link | default: routes.all_products_collection_url }}" class="btn">{{ primary_cta_label }}</a>
+        <a href="{{ primary_cta_link }}" class="btn">{{ primary_cta_label }}</a>
       </div>
     </details>
   </div>
