--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -13,7 +13,11 @@
 
   assign primary_cta_label = section.settings.cta_label
   assign primary_cta_link = section.settings.cta_link
-  if primary_cta_link == blank
+  if settings.subscription_product != blank
+    assign primary_cta_link = settings.subscription_product.url
+  elsif settings.subscription_fallback_link != blank
+    assign primary_cta_link = settings.subscription_fallback_link
+  elsif primary_cta_link == blank
     assign primary_cta_link = default_subscribe_link
   endif
 
